--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Bad Change
+  h1 Change in the only truth
   #wrapper
     #trainList
       h2 Train yo - this should be bad
